--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: #181d31;
+  color: #f0e9d2;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+p {
+  line-height: 2;
+  text-align: left;
+  font-family: "Roboto Slab", serif;
+}
