--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-aos="zoom-in">
   <img class="vigyaan" src="./assets/images/vigyaan.jpg" alt="group photo" />
   <div class="para">
     My team The Innovation Ninjas was the finalist in VIGYAAN, the National
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" data-aos="zoom-in">
   <img class="leetcode" src="./assets/images/leetcode.png" alt="logo" />
   <div class="para">
     I have solved over 600 problems on LeetCode and Codeforces, demonstrating my
