--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngFor="let skill of skills">
+<div class="container" *ngFor="let skill of skills" data-aos="flip-left">
   <img class="logo" [src]="skill.image" />
   <h3>{{ skill.title }}</h3>
 </div>
