--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <h1>Hi There! <img class="hii" src="./assets/images/wave.gif" alt="wave" /></h1>
 <h1>I'm VIKAS KUMAR</h1>
+<h1>Software Engineer at Biz2X</h1>
 
 <!-- introduction -->
 <h2>Let Me Introduce Myself</h2>
@@ -8,7 +9,13 @@
   src="./assets/images/profilePic.jpeg"
   alt="Profile Picture"
 />
-<div *ngFor="let detail of details" class="skill">
+<div
+  *ngFor="let detail of details"
+  class="skill"
+  data-aos="flip-left"
+  data-aos-easing="ease-out-cubic"
+  data-aos-duration="2000"
+>
   <img class="card-image" [src]="detail.image" />
   <p>{{ detail.para }}</p>
 </div>
