--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,7 @@
 <div class="project-list">
-  <app-card *ngFor="let project of projects" [project]="project"></app-card>
+  <app-card
+    *ngFor="let project of projects"
+    [project]="project"
+    data-aos="fade-right"
+  ></app-card>
 </div>
